Add firebase auth test

--- a/sql-grader/backend/web/login.html
+++ b/sql-grader/backend/web/login.html
@@ -5,25 +5,26 @@
 	<title>Login - Diffuse</title>
 </head>
 <body>
-	<button onclick="login()">Login</button>
+	<button id="btn" onclick="login()">Login</button>
 	<p id="token"></p>
 	<script type="module">
 		import { initializeApp } from 'https://www.gstatic.com/firebasejs/9.19.1/firebase-app.js'
 		import { GoogleAuthProvider, signInWithPopup } from 'https://www.gstatic.com/firebasejs/9.19.1/firebase-auth.js'
-		import { getAuth } from 'https://www.gstatic.com/firebasejs/9.19.1/firebase-auth.js'
+		import { getAuth, connectAuthEmulator } from 'https://www.gstatic.com/firebasejs/9.19.1/firebase-auth.js'
 		
 		const firebaseConfig = {
-			apiKey: "AIzaSyCgckarBKGfE6VZkJNh0VNfiZLtAaHLrg4",
-			authDomain: "anione-diffuse.firebaseapp.com",
-			projectId: "anione-diffuse",
-			storageBucket: "anione-diffuse.appspot.com",
-			messagingSenderId: "801938163703",
-			appId: "1:801938163703:web:8ef5aede0cd07ff7d010f2",
-			measurementId: "G-9NSVJZZ9JM"
+			apiKey: "AIzaSyAyPliGjd793q7Q_kOul-l9wUaT0WWLLgY",
+			authDomain: "anione-diffuse-dev.firebaseapp.com",
+			projectId: "anione-diffuse-dev",
+			storageBucket: "anione-diffuse-dev.appspot.com",
+			messagingSenderId: "657426422173",
+			appId: "1:657426422173:web:298fdb7002901397507774"
 		};
 		
 		const firebaseApp = initializeApp(firebaseConfig)
 		const firebaseAuth = getAuth(firebaseApp)
+		
+		connectAuthEmulator(firebaseAuth, "http://localhost:9099");
 		
 		window.login = () => {
 			const provider = new GoogleAuthProvider()
